Added a bunch of consts + added .gitignore.

--- a/Win33/Win33Examples/Win33Examples.vcxproj.filters
+++ b/Win33/Win33Examples/Win33Examples.vcxproj.filters
@@ -47,11 +47,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="TestIcon1.ico">
+    <None Include="TestIcon2.ico">
       <Filter>Resources\Icons</Filter>
-    </Image>
-    <Image Include="TestIcon2.ico">
+    </None>
+    <None Include="TestIcon1.ico">
       <Filter>Resources\Icons</Filter>
-    </Image>
+    </None>
   </ItemGroup>
 </Project>
